unpackaged/main/default/objects/Nomination_Rubric__c/Nomination_Rubric__c.object-meta.xml
<CustomObject>
    <label>Nomination Rubric</label>
    <nameField>
        <label>Nomination Rubric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nomination Rubrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>