unpackaged/main/default/objects/Nomination_Rubric__c/fields/a__c.field-meta.xml
<CustomField>
    <fullName>a__c</fullName>
    <label>Achievements Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>