unpackaged/main/default/objects/Nomination_Rubric__c/fields/Achievements__c.field-meta.xml
<CustomField>
    <fullName>Achievements__c</fullName>
    <label>Achievements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>