unpackaged/main/default/objects/Nomination_Rubric__c/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <label>Challenges</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>