unpackaged/main/default/objects/Nomination_Rubric__c/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <label>Character</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>