unpackaged/main/default/objects/Nomination_Rubric__c/fields/Character_Details__c.field-meta.xml
<CustomField>
    <fullName>Character_Details__c</fullName>
    <label>Character Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>