unpackaged/main/default/objects/Nomination_Rubric__c/fields/Extra_Curricular__c.field-meta.xml
<CustomField>
    <fullName>Extra_Curricular__c</fullName>
    <label>Extra-Curricular</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>