unpackaged/main/default/objects/Nomination_Rubric__c/fields/Extra_Curricular_Details__c.field-meta.xml
<CustomField>
    <fullName>Extra_Curricular_Details__c</fullName>
    <label>Extra-Curricular Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>