unpackaged/main/default/objects/Nomination_Rubric__c/fields/Fit__c.field-meta.xml
<CustomField>
    <fullName>Fit__c</fullName>
    <label>Fit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>