unpackaged/main/default/objects/Nomination_Rubric__c/fields/Fit_Details__c.field-meta.xml
<CustomField>
    <fullName>Fit_Details__c</fullName>
    <label>Fit Details</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>