unpackaged/main/default/objects/Nomination_Rubric__c/fields/Group_Dynamic__c.field-meta.xml
<CustomField>
    <fullName>Group_Dynamic__c</fullName>
    <label>Group Dynamic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>