unpackaged/main/default/objects/Nomination_Rubric__c/fields/Group_Dynamic_Details__c.field-meta.xml
<CustomField>
    <fullName>Group_Dynamic_Details__c</fullName>
    <label>Group Dynamic Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>