unpackaged/main/default/objects/Nomination_Rubric__c/fields/Leadership__c.field-meta.xml
<CustomField>
    <fullName>Leadership__c</fullName>
    <label>Leadership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>