unpackaged/main/default/objects/Nomination_Rubric__c/fields/Leadership_Details__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Details__c</fullName>
    <label>Leadership Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>