unpackaged/main/default/objects/Nomination_Rubric__c/fields/Nomination__c.field-meta.xml
<CustomField>
    <fullName>Nomination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nomination</label>
    <referenceTo>Nomination__c</referenceTo>
    <relationshipLabel>Nomination Rubrics</relationshipLabel>
    <relationshipName>Nomination_Rubrics</relationshipName>
    <type>Lookup</type>
</CustomField>