unpackaged/main/default/objects/Nomination_Rubric__c/fields/Nominator_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Nominator_Last_Name__c</fullName>
    <label>Nominator Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>