unpackaged/main/default/objects/Nomination_Rubric__c/fields/Nominator_Score__c.field-meta.xml
<CustomField>
    <fullName>Nominator_Score__c</fullName>
    <formula>Achievements__c + Character__c +  Extra_Curricular__c + Fit__c + Group_Dynamic__c + Leadership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nominator Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>