unpackaged/main/default/objects/Nomination_Rubric__c/fields/Student_s_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_s_First_Name__c</fullName>
    <label>Student&#39;s First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>