unpackaged/main/default/objects/Nomination_Rubric__c/fields/Verto_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Verto_Challenges__c</fullName>
    <label>Verto Challenges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>