unpackaged/main/default/objects/Nomination_Rubric__c/fields/Verto_Character__c.field-meta.xml
<CustomField>
    <fullName>Verto_Character__c</fullName>
    <label>Verto Character</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>