unpackaged/main/default/objects/Nomination_Rubric__c/fields/Verto_Extra_Curricular__c.field-meta.xml
<CustomField>
    <fullName>Verto_Extra_Curricular__c</fullName>
    <label>Verto Extra-Curricular</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>