unpackaged/main/default/objects/Nomination_Rubric__c/fields/Verto_Score__c.field-meta.xml
<CustomField>
    <fullName>Verto_Score__c</fullName>
    <formula>Verto_Achievements__c + Verto_Challenges__c + Verto_Character__c + Verto_Extra_Curricular__c + Verto_Fit__c  +Verto_Group_Dynamic__c + Verto_Leadership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verto Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>