unpackaged/main/default/objects/Nomination_Rubric__c/recordTypes/International_Leadership_Award.recordType-meta.xml
<RecordType>
    <fullName>International_Leadership_Award</fullName>
    <active>true</active>
    <description>Default Record Type for the International Leadership Award Rubric</description>
    <label>International Leadership Award</label>
</RecordType>